--- a/support/azure/azure-monitor/toc.yml
+++ b/support/azure/azure-monitor/toc.yml
@@ -142,7 +142,7 @@ items:
     - name: Advanced troubleshooting steps
       href: azure-monitor-agent/ama-windows-installation-issues-advanced-troubleshooting-steps.md
 
-- name: Diagnostic Settings
+- name: Diagnostic settings
   items:
-  - name: Deleted Event Hub is recreated
+  - name: Deleted Event Hub is automatically recreated
     href: diagnostic-settings/data-flow/deleted-event-hub-automatically-recreated.md
