--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -22,11 +22,13 @@
     - name: Resolve issues when starting the new Teams app
       href: ./teams-sign-in/resolve-new-teams-launch-issues.md
     - name: Resolve new Teams installation issues
-      href: ./teams-administration/fix-new-teams-installation-issues.md
-    - name: '"Root cause undetermined" for Teams client update failure'
-      href: ./teams-administration/root-cause-undetermined-teams-update-failure.md  
+      href: ./teams-administration/fix-new-teams-installation-issues.md     
     - name: Self-help diagnostics for Teams admins
       href: ./teams-administration/admin-self-help-diagnostics.md
+    - name: Teams Client Health
+      items:
+      - name: '"Root cause undetermined" for Teams client update failure'
+        href: ./teams-administration/root-cause-undetermined-teams-update-failure.md
     - name: '"The following application instance is not present in BVD" error when assigning a phone number to a resource accounts'
       href: ./teams-administration/following-application-instance-not-present-error.md
     - name: Troubleshoot connectivity issues
