--- a/support/power-platform/power-automate/toc.yml
+++ b/support/power-platform/power-automate/toc.yml
@@ -73,7 +73,7 @@
         - name: Press button or click link on web page does not work on file uploader
           href: desktop-flows/browser-automation/file-uploader-click-issues.md
         - name: How to scroll on a web page
-          href: desktop-flows/browser-automation/how-to-scroll-web-page.md
+          href: /power-automate/desktop-flows/how-to/scroll-web-page?context=/troubleshoot/power-platform/power-automate/context/context
         - name: Run Javascript function on Web page action is not executed without any error thrown
           href: desktop-flows/browser-automation/js-not-executed.md
         - name: Web automation with Internet Explorer issue
@@ -102,7 +102,7 @@
           href: desktop-flows/ui-automation/focus-window-action-not-working.md
         - name: Failed to get UI element
           href: desktop-flows/ui-automation/failed-get-ui-element.md
-        - name: Failed to get element/window or Element/Window wasn't found error
+        - name: Failed to get element/window or Element/Window wasn't found errors
           href: desktop-flows/ui-automation/ui-automation-action-fails-errors.md
         - name: SAP UI element click issue
           href: desktop-flows/ui-automation/ui-sap-automation/sap-click-element-dpi.md
@@ -110,6 +110,8 @@
           href: desktop-flows/ui-automation/set-drop-down-list-value-fails.md
         - name: UI element highlighting or hovering issues in virtual desktops
           href: desktop-flows/ui-automation/ui-rdp-automation/rdp-no-highlight.md
+        - name: UIPI issues with UI and Web automation actions
+          href: desktop-flows/ui-automation/ui-rdp-automation/uipi-issues.md
     - name: '"Could not read the application certificate" error when creating a connection'
       href: desktop-flows/application-certificate-error.md
     - name: Agent-related errors when running attended or unattended desktop flows
