--- a/support/entra/entra-id/toc.yml
+++ b/support/entra/entra-id/toc.yml
@@ -59,6 +59,8 @@
         href: app-integration/get-signed-in-users-groups-in-access-token.md
       - name: Enable MSAL4J logging in a Spring Boot web application
         href: app-integration/enable-msal4j-logging-spring-boot-webapp.md
+      - name: Repeated login prompts in iOS MSAL implementation
+        href: repeat-login prompts-in-msal-ios-app.md
 
   - name: Troubleshoot adding apps
     href: app-integration/troubleshoot-adding-apps.md
