--- a/support/entra/entra-id/toc.yml
+++ b/support/entra/entra-id/toc.yml
@@ -55,12 +55,9 @@
         href: app-integration/android-app-authentication-fails-after-published-to-google-play-store.md
       - name: WIF10201 No valid key mapping found
         href: app-integration/troubleshoot-wif10201-no-validkey-securitytoken-mvc.md
-      - name: Get signed-in user groups from a group overage claim
-        href: app-integration/get-signed-in-users-groups-in-access-token.md
-      - name: Enable MSAL4J logging in a Spring Boot web application
-        href: app-integration/enable-msal4j-logging-spring-boot-webapp.md
-      - name: Cookies are disabled error in MSAL.Net app
-        href: app-integration/script-errors-running-msal-net-xbap-app.md
+      - name: Role-based access control issues in WebAssembly app
+        href: app-integration/troubleshoot-rabc-issues-webassembly-auth-apps.md
+
 
   - name: Troubleshoot adding apps
     href: app-integration/troubleshoot-adding-apps.md
@@ -94,7 +91,7 @@
       - name: Error AADSTS50057 - user account is disabled
         href: app-integration/error-code-aadsts50057-user-account-is-disabled.md
       - name: AADSTS500011 - Resource Principal Not Found
-        href: ./app-integration/error-code-aadsts500011-resource-principal-not-found.md
+        href: app-integration/error-code-aadsts500011-resource-principal-not-found.md
         displayName: AADSTS500011
       - name: Error AADSTS500571 - guest user account is disabled
         href: app-integration/error-code-aadsts500571-guest-user-account-is-disabled.md
@@ -409,4 +406,3 @@
       href: user-prov-sync/exclude-user-primary-group.md
     - name: Yellow exclamation mark in Office 2013
       href: user-prov-sync/yellow-exclamation-mark-office2013.md
-
