--- a/support/power-platform/dataverse/toc.yml
+++ b/support/power-platform/dataverse/toc.yml
@@ -162,6 +162,10 @@
       href: email-exchange-synchronization/exception-appears-server-side-sync.md
     - name: '"You cannot send email as the selected user" error'
       href: email-exchange-synchronization/cannot-send-email-as-another-user.md
+- name: Import and export data
+  items:
+    - name: Troubleshoot Synapse Link profile creation issues
+      href: import-export-data/troubleshoot-synapse-link-profile-creation-issues.md
 - name: Plug-in execution
   items:
     - name: Dataverse plug-ins
