--- a/support/entra/entra-id/toc.yml
+++ b/support/entra/entra-id/toc.yml
@@ -407,3 +407,8 @@
       href: user-prov-sync/exclude-user-primary-group.md
     - name: Yellow exclamation mark in Office 2013
       href: user-prov-sync/yellow-exclamation-mark-office2013.md
+
+  - name: Capture SSL traffic
+    items:
+    - name: Capture HTTPS traffic with Http Fiddler
+      href: app-integration/capture-https-traffic-http-fiddler-entra-id-app.md
