--- a/SharePoint/OneDrive/onedrivetoc/toc.yml
+++ b/SharePoint/OneDrive/onedrivetoc/toc.yml
@@ -48,7 +48,9 @@
     - name: Check OneDrive site eligibility for increased storage
       href: ../storage/check-storage-increase-eligibility.md
   - name: Sites
-    items:  
+    items:
+    - name: 'Error "You can't edit your files because your license to use OneDrive ended"'
+      href: ../sites/cannot-edit-files-onedrive-license-end.md
     - name: Top navigation bar displays either Sites or Newsfeed instead of OneDrive
       href: ../../SharePointOnline/sites/office-365-top-navigation-bar-displays-either-sites-or-newsfeed.md?toc=/SharePoint/troubleshoot/onedrivetoc/toc.json&bc=/SharePoint/troubleshoot/breadcrumb/toc.json
     - name: Troubleshooting guide stops at provisioning stage
