--- a/support/power-platform/dataverse/toc.yml
+++ b/support/power-platform/dataverse/toc.yml
@@ -161,7 +161,7 @@
     - name: '"You cannot send email as the selected user" error'
       href: email-exchange-synchronization/cannot-send-email-as-another-user.md
 - name: Importing and exporting data
-  item:
+  items:
     - name: Data export option isn't available in Azure Application Insights
       href: import-export-data/data-export-option-not-available-in-application-insights.md
 - name: Plug-in execution
