--- a/support/windows-server/toc.yml
+++ b/support/windows-server/toc.yml
@@ -359,6 +359,8 @@ items:
       href: ./active-directory/default-workstation-numbers-join-domain.md
     - name: 'Domain join error 0x534 "No mapping between account names and security IDs was done"'
       href: ./active-directory/domain-join-error-0x534-no-mapping-between-account-names-and-security-ids-was-done.md
+    - name: 'Domain join error 0x6D9 "There are no more endpoints available from the endpoint mapper"'
+      href: ./active-directory/domain-join-error-0x6d9-there-are-no-more-endpoints-available-from-the-endpoint-mapper
     - name: Netlogon service doesn't keep settings after in-place upgrade
       href: ./active-directory/netlogon-service-not-start-automatically.md
     - name: Support boundaries for Active Directory over NAT
