--- a/support/dynamics-365/customer-service/toc.yml
+++ b/support/dynamics-365/customer-service/toc.yml
@@ -2,6 +2,8 @@
   href: welcome-customer-service.yml
 - name: Cases or Incidents
   items:
+    - name: Can't switch between different Teams organizations in the Dynamics 365 app
+      href: cases-or-incidents/cannot-switch-teams-organizations-dynamics-365-app.md
     - name: Sentiment analysis not reflecting positive sentiment or capitalization
       href: cases-or-incidents/sentiment-analysis-not-reflecting-positive-sentiment-or-capitalization.md 
 - name: Customer Service Insights
@@ -142,6 +144,8 @@
           href: omnichannel-for-customer-service/preconversation-survey-mobile-number-field-restriction.md
     - name: Custom Channel
       items:
+        - name: Can't receive Instagram messages and comments in a customer service application
+          href: omnichannel-for-customer-service/cannot-receive-instagram-messages-and-comments.md
         - name: Conversations from custom channel not appearing in Inbox
           href: omnichannel-for-customer-service/custom-channel-conversations-not-show-in-inbox.md
     - name: Customer summary and Closed conversation form
@@ -180,6 +184,10 @@
           href: omnichannel-for-customer-service/instance-unavailable-provision-omnichannel.md
         - name: Omnichannel provisioning fails with an error
           href: omnichannel-for-customer-service/omnichannel-provision-fail-errors.md
+    - name: Messaging capabilities
+      items:
+        - name: '"This number cannot be upgraded, Calling and SMS capabilities maxed out" error'    
+          href: omnichannel-for-customer-service/number-cannnot-upgraded-calling-sms-maxed-out-error.md
     - name: Copilot Studio agents
       items:
         - name: Copilot Studio agent conversations are active after a chat ends
@@ -206,6 +214,8 @@
           href: omnichannel-for-customer-service/social-data-sync.md
     - name: Voice channel
       items:
+        - name: Can't set display name for outbound calls
+          href: omnichannel-for-customer-service/cannot-set-display-name-for-outbound-calls.md
         - name: Incoming voice calls with long greeting messages cause connection delays
           href: omnichannel-for-customer-service/greeting-message-delay-agent-connection.md
         - name: Notification not functioning for incoming messages
