--- a/support/windows-server/toc.yml
+++ b/support/windows-server/toc.yml
@@ -360,9 +360,9 @@ items:
     - name: 'Domain join error 0x534 "No mapping between account names and security IDs was done"'
       href: ./active-directory/domain-join-error-0x534-no-mapping-between-account-names-and-security-ids-was-done.md
     - name: 'Domain join error 0x6D9 "There are no more endpoints available from the endpoint mapper"'
-      href: ./active-directory/domain-join-error-0x6d9-there-are-no-more-endpoints-available-from-the-endpoint-mapper
+      href: ./active-directory/domain-join-error-0x6d9-there-are-no-more-endpoints-available-from-the-endpoint-mapper.md
     - name: 'Domain join error 0x40 "The specified network name is no longer available"'
-      href: ./active-directory/domain-join-error-0x40-the-specified-network-name-is-no-longer-available
+      href: ./active-directory/domain-join-error-0x40-the-specified-network-name-is-no-longer-available.md
     - name: Failure when you use an existing computer account to join a domain
       href: ./active-directory/failure-when-you-use-an-existing-computer-account-to-join-a-domain.md
     - name: Netlogon service doesn't keep settings after in-place upgrade
