--- a/support/entra/entra-id/toc.yml
+++ b/support/entra/entra-id/toc.yml
@@ -49,6 +49,8 @@
   items:
   - name: Developing or registering apps
     items:
+      - name: Cookies are disabled error in MSAL.Net XBAP application
+        href: app-integration/script-errors-running-msal-net-xbap-app.md
       - name: IDX10501 Error in ASP.NET Core with Azure B2C Custom Policy
         href: app-integration/troubleshoot-error-idx10501-aspnet-b2c.md
       - name: Authentication fails after Android app is published to Google Play Store
