update per reviewer's comments

--- a/support/windows-server/toc.yml
+++ b/support/windows-server/toc.yml
@@ -357,8 +357,8 @@ items:
       href: ./active-directory/cannot-connect-internet-domain.md
     - name: Default limit to workstation numbers
       href: ./active-directory/default-workstation-numbers-join-domain.md
-    - name: Error 0x5 Access Denied when you rename a computer in a DC
-      href: ./active-directory/error-0x5-access-denied-rename-computer-dc.md
+    - name: Error 0x5 Access Denied when you rename a computer
+      href: ./active-directory/error-0x5-access-denied-rename-computer.md
     - name: Netlogon service doesn't keep settings after in-place upgrade
       href: ./active-directory/netlogon-service-not-start-automatically.md
     - name: Support boundaries for Active Directory over NAT
