--- a/support/entra/entra-id/toc.yml
+++ b/support/entra/entra-id/toc.yml
@@ -418,3 +418,5 @@
   items:
   - name: Capture HTTPS traffic with Fiddler
     href: app-integration/capture-https-traffic-fiddler-entra-id-app.md
+  - name: Capture Python Webapp HTTPS traffic with Fiddler
+    href: capture-https-traffic-fiddler-python-app.md
