--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -27,6 +27,8 @@
       href: ./teams-administration/admin-self-help-diagnostics.md
     - name: Teams Client Health
       items:
+      - name: Resolve Teams client launch failures
+        href: ./teams-administration/resolve-teams-client-launch-failures.md
       - name: '"Root cause undetermined" for Teams client update failure'
         href: ./teams-administration/root-cause-undetermined-teams-update-failure.md
     - name: '"The following application instance is not present in BVD" error when assigning a phone number to a resource accounts'
