--- a/support/windows-client/toc.yml
+++ b/support/windows-client/toc.yml
@@ -839,6 +839,8 @@ items:
       href: ./setup-upgrade-and-drivers/updates-not-install-with-fast-startup.md
   - name: User state migration tool
     items:
+    - name: Error "Invalid store path" during the LoadState process
+      href: setup-upgrade-and-drivers/error-invalid-store-path-loadstate-user-state-migration-tool.md
     - name: USMT common issues
       href: ./setup-upgrade-and-drivers/usmt-common-issues.md
     - name: USMT return codes
@@ -1103,14 +1105,12 @@ items:
       href: ./user-profiles-and-logon/cached-user-logon-fails-lsasrv-event-45058.md
   - name: User profiles
     items:
-    - name: Can't set a convenience PIN
-      href: ./user-profiles-and-logon/cannot-configure-a-convenience-pin.md
     - name: Create a new profile if the profile is damaged
       href: ./user-profiles-and-logon/create-new-user-profile.md
-    - name: Error "Invalid store path" during the LoadState process
-      href: ./user-profiles-and-logon/error-invalid-store-path-loadstate-user-state-migration-tool.md
   - name: Windows Hello for Business
     items:
+    - name: Can't set a convenience PIN
+      href: user-profiles-and-logon/cannot-configure-a-convenience-pin.md
     - name: Windows Hello errors during PIN creation in Windows 10
       href: ./user-profiles-and-logon/windows-hello-errors-during-pin-creation-in-windows-10.md
     - name: Retrieve certificate to troubleshoot Windows Hello for Business logon failures
