--- a/support/windows-server/toc.yml
+++ b/support/windows-server/toc.yml
@@ -13,8 +13,6 @@ items:
       href: ./active-directory/detect-and-recover-from-usn-rollback.md
     - name: Event 2089 if you don't back up a domain controller
       href: ./active-directory/ntds-replication-event-2089-backup-latency-interval.md
-    - name: How to remove orphaned domains
-      href: ./active-directory/remove-orphaned-domains.md
     - name: How to restore deleted user accounts and their groups
       href: ./active-directory/retore-deleted-accounts-and-groups-in-ad.md
     - name: No logon servers are available
@@ -23,12 +21,8 @@ items:
       href: ./active-directory/ad-database-offline-defragmentation.md
     - name: Relocate a SYSVOL tree
       href: ./active-directory/relocate-sysvol-tree-frs-for-replication.md
-    - name: RODC replicates passwords
-      href: ./active-directory/rodc-replicates-passwords-grant-incorrect-permissions.md
     - name: Syskey.exe utility is no longer supported
       href: ./active-directory/syskey-exe-utility-is-no-longer-supported.md
-    - name: SYSVOL folder isn't replicated between domain controllers
-      href: ./active-directory/file-replication-service-event-13552-13555.md
   - name: Active Directory database issues and domain controller boot failures
     items:
     - name: '"access is denied" error when replicating AD directory service'
@@ -157,111 +151,113 @@ items:
       href: ./active-directory/troubleshoot-adreplication-guidance.md
     - name: Troubleshoot common Active Directory replication errors
       href: ./active-directory/common-active-directory-replication-errors.md
-    - name: Active Directory changes don't replicate      
+    - name: Active Directory changes don't replicate
       href: ./active-directory/active-directory-changes-not-replicate.md
     - name: Active Directory installation fails
       href: active-directory/creating-ntds-settings-object-for-ad-dc.md
-    - name: Active Directory replication error 8304      
+    - name: Active Directory replication error 8304
       href: ./active-directory/active-directory-replication-error-8304.md
-    - name: Active Directory replication error 1256      
+    - name: Active Directory replication error 1256
       href: ./active-directory/active-directory-replication-error-1256.md
-    - name: Active Directory replication error 1396      
+    - name: Active Directory replication error 1396
       href: ./active-directory/active-directory-replication-error-1396.md
-    - name: Active Directory replication error 1722      
+    - name: Active Directory replication error 1722
       href: ./active-directory/replication-error-1722-rpc-server-unavailable.md
-    - name: Active Directory replication error 1818      
+    - name: Active Directory replication error 1818
       href: ./active-directory/replication-error-1818.md
     - name: Active Directory replication error 1908
       href: active-directory/ad-replication-error-1908-not-find-domain-controller.md
-    - name: Active Directory replication error 2146893022      
+    - name: Active Directory replication error 2146893022
       href: ./active-directory/replication-error-2146893022.md
-    - name: Active Directory replication error 5      
+    - name: Active Directory replication error 5
       href: ./active-directory/replications-fail-with-error-5.md
-    - name: Active Directory replication error 8333      
+    - name: Active Directory replication error 8333
       href: ./active-directory/replication-error-8333.md
-    - name: Active Directory replication error 8409      
+    - name: Active Directory replication error 8409
       href: ./active-directory/ad-replication-fails-error-8409.md
-    - name: Active Directory replication error 8418      
+    - name: Active Directory replication error 8418
       href: ./active-directory/replication-error-8418.md
-    - name: Active Directory replication error 8446      
+    - name: Active Directory replication error 8446
       href: ./active-directory/replication-error-8446.md
-    - name: Active Directory replication error 8451      
+    - name: Active Directory replication error 8451
       href: ./active-directory/active-directory-replication-error-8451.md
-    - name: Active Directory replication error 8452      
+    - name: Active Directory replication error 8452
       href: ./active-directory/replication-error-8452.md
-    - name: Active Directory replication error 8453      
+    - name: Active Directory replication error 8453
       href: ./active-directory/replication-error-8453.md
-    - name: Active Directory replication error 8456 or 8457      
+    - name: Active Directory replication error 8456 or 8457
       href: ./active-directory/replication-error-8456-8457.md
-    - name: Active Directory replication error 8461      
+    - name: Active Directory replication error 8461
       href: ./active-directory/adrepl-troubleshoot-replication-error-8461.md
-    - name: Active Directory replication error 8464      
+    - name: Active Directory replication error 8464
       href: ./active-directory/replication-error-8464.md
-    - name: Active Directory replication error 8477      
+    - name: Active Directory replication error 8477
       href: ./active-directory/replication-error-8477.md
-    - name: Active Directory replication error 8545      
+    - name: Active Directory replication error 8545
       href: ./active-directory/active-directory-replication-error-8545.md
-    - name: Active Directory replication error 8606      
+    - name: Active Directory replication error 8606
       href: ./active-directory/replication-error-8606.md
-    - name: Active Directory replication error 8614      
+    - name: Active Directory replication error 8614
       href: ./active-directory/replication-error-8614.md
-    - name: Active Directory replication Event ID 1311      
+    - name: Active Directory replication Event ID 1311
       href: ./active-directory/troubleshoot-event-id-1311-messages.md
-    - name: Active Directory replication Event ID 1388 or 1988      
+    - name: Active Directory replication Event ID 1388 or 1988
       href: ./active-directory/active-directory-replication-event-id-1388-1988.md
-    - name: Active Directory replication Event ID 1865      
+    - name: Active Directory replication Event ID 1865
       href: ./active-directory/active-directory-replication-not-work-event-1865.md
-    - name: Active Directory replication Event ID 1925      
+    - name: Active Directory replication Event ID 1925
       href: ./active-directory/active-directory-replication-event-id-1925-dns-lookup.md
-    - name: Active Directory replication Event ID 2042      
+    - name: Active Directory replication Event ID 2042
       href: ./active-directory/active-directory-replication-event-id-2042.md
-    - name: Active Directory replication Event ID 2087      
+    - name: Active Directory replication Event ID 2087
       href: ./active-directory/active-directory-replication-event-id-2087.md
-    - name: Active Directory replication Event ID 2108 and 1084      
+    - name: Active Directory replication Event ID 2108 and 1084
       href: ./active-directory/replication-event-id-2108-1084.md
-    - name: AD operations fail with Win32 error 1127      
+    - name: AD operations fail with Win32 error 1127
       href: ./active-directory/replication-error-1127.md
-    - name: AD operations fail with Win32 error 8240      
+    - name: AD operations fail with Win32 error 8240
       href: ./active-directory/active-directory-replication-error-8240.md
-    - name: Can't change replication scope of AD-integrated zone      
+    - name: Can't change replication scope of AD-integrated zone
       href: ./active-directory/change-integrated-dns-zone-replication-scope.md
-    - name: Can't delete AD objects with many links      
+    - name: Can't delete AD objects with many links
       href: ./active-directory/replication-failures-delete-active-directory-objects.md
-    - name: Changes aren't replicated to destination domain controllers      
+    - name: Changes aren't replicated to destination domain controllers
       href: ./active-directory/changes-arent-replicated-controllers.md
-    - name: Diagnose replication failures      
+    - name: Diagnose replication failures
       href: ./active-directory/diagnose-replication-failures.md
-    - name: Disable KCC from automatically creating replication topology      
+    - name: Disable KCC from automatically creating replication topology
       href: ./active-directory/disable-knowledge-consistency-checker-automatic-generation.md
-    - name: Duplicate AD replication connections are created      
+    - name: Duplicate AD replication connections are created
       href: ./active-directory/duplicate-active-directory-replication-connections.md
-    - name: How to restrict RPC traffic to a specific port      
+    - name: How to restrict RPC traffic to a specific port
       href: ./active-directory/restrict-ad-rpc-traffic-to-specific-port.md
-    - name: Lingering objects in a Windows Server Active Directory forest      
+    - name: Lingering objects in a Windows Server Active Directory forest
       href: ./active-directory/information-lingering-objects.md
-    - name: Lingering objects manual removal      
+    - name: Lingering objects manual removal
       href: ./active-directory/manually-remove-lingering-objects.md
-    - name: Manually replicating data between domain controllers fails      
+    - name: Manually replicating data between domain controllers fails
       href: ./active-directory/target-principal-name-is-incorrect-when-replicating-data.md
-    - name: Modify the default intra-site DC replication interval      
+    - name: Modify the default intra-site DC replication interval
       href: ./active-directory/modify-default-intra-site-dc-replication-interval.md
-    - name: NTDS Replication Warning Event ID 1093      
+    - name: NTDS Replication Warning Event ID 1093
       href: ./active-directory/ntds-replication-warning-event-id-1093.md
-    - name: NTDS replication warning IDs 1083 and 1061      
+    - name: NTDS replication warning IDs 1083 and 1061
       href: ./active-directory/ntds-replication-warning-1083-1061-sam-error-12294.md
-    - name: NTFRS deprecation blocks installation of replica DCs      
+    - name: NTFRS deprecation blocks installation of replica DCs
       href: ./active-directory/ntfrs-deprecation-blocks-replic-dc-installation.md
-    - name: Operations fail with Win32 error 1753      
+    - name: Operations fail with Win32 error 1753
       href: ./active-directory/replication-error-1753.md
-    - name: Operations fail with Win32 error 8524      
+    - name: Operations fail with Win32 error 8524
       href: ./active-directory/replication-error-8524.md
-    - name: Orphaned child domain controller is not replicated      
+    - name: Orphaned child domain controller is not replicated
       href: ./active-directory/orphaned-child-domain-isnt-replicated.md
-    - name: Troubleshoot domain controller replication error 1727      
+    - name: RODC replicates passwords
+      href: active-directory/rodc-replicates-passwords-grant-incorrect-permissions.md      
+    - name: Troubleshoot domain controller replication error 1727
       href: ./active-directory/remote-procedure-call-failed-and-did-not-execute-error.md
-    - name: Troubleshoot Jet database errors and recovery steps      
+    - name: Troubleshoot Jet database errors and recovery steps
       href: ./active-directory/jet-database-errors-recovery-steps.md
-    - name: Use Ntdsutil to find and clean up duplicate security identifiers      
+    - name: Use Ntdsutil to find and clean up duplicate security identifiers
       href: ./active-directory/ntdsutil-find-clean-duplicate-security-identifiers.md
   - name: Active Directory Rights Management Services
     items:
@@ -1497,6 +1493,8 @@ items:
       href: ./networking/ntfrs-error-event-13559-replication-stops.md
     - name: Recovering missing FRS objects and attributes in AD
       href: ./networking/recovering-missing-frs-objects-attributes-ad.md
+    - name: SYSVOL folder isn't replicated between domain controllers
+      href: networking/file-replication-service-event-13552-13555.md
     - name: Troubleshoot the File Replication Service
       href: ./networking/troubleshoot-file-replication-service-ditributed-file-system.md
     - name: Use BurFlags to reinitialize FRS
@@ -2843,6 +2841,8 @@ items:
       href: ./windows-security/trust-between-windows-ad-domain-not-work-correctly.md
     - name: How to recover from a Golden gMSA attack
       href: ./windows-security/recover-from-golden-gmsa-attack.md
+    - name: How to remove orphaned domains
+      href: windows-security/remove-orphaned-domains.md
     - name: Overlapping Forest Names cause problems
       href: ./windows-security/overlapping-forest-names-problem-forest-trust-established.md
     - name: Security identifier could not be resolved
