--- a/support/dynamics-365/customer-service/toc.yml
+++ b/support/dynamics-365/customer-service/toc.yml
@@ -165,9 +165,13 @@
         - name: Chat widget doesn't load on the portal
           href: omnichannel-for-customer-service/chat-widget-not-loading-portal.md     
         - name: Email field validation in a Pre-conversation survey doesn't work as expected
-          href: omnichannel-for-customer-service/email-field-validation-in-pre-conversation-survey-not-working.md           
+          href: omnichannel-for-customer-service/email-field-validation-in-pre-conversation-survey-not-working.md
     - name: Licensing, provisioning, and installation
       items:
+        - name: Agent capacity issue in customer support assignment
+          href: omnichannel-for-customer-service/agent-capacity-issue-in-customer-support-assignment.md
+        - name: Chat channel provisioning fails due to license issue
+          href: omnichannel-for-customer-service/chat-channel-provisioning-fails-in-due-to-license-issue.md
         - name: Instance unavailable to select on the provisioning app
           href: omnichannel-for-customer-service/instance-unavailable-provision-omnichannel.md
         - name: Omnichannel provisioning fails with an error
@@ -204,5 +208,7 @@
       items:
         - name: Incoming voice calls with long greeting messages cause connection delays
           href: omnichannel-for-customer-service/greeting-message-delay-agent-connection.md
+        - name: The remote name could not be resolved when enabling or adding a user
+          href: omnichannel-for-customer-service/the-remote-name-could-not-be-resolved-error-when-enabling-or-adding-a-user.md
         - name: Use diagnostic messages to troubleshoot call issues
-          href: omnichannel-for-customer-service/use-diagnostic-messages-in-call-issues.md 
+          href: omnichannel-for-customer-service/use-diagnostic-messages-in-call-issues.md
